--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@firebase/firestore": "^2.1.4",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
+    "firebase": "^7.9.0",
+    "lottie-react-native": "^2.6.1",
+    "react": "^16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-native-web-lottie": "^1.4.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
