--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
   "dependencies": {
     "@firebase/firestore": "^2.1.4",
     "expo": "~40.0.0",
+    "expo-constants": "^10.0.1",
     "expo-status-bar": "~1.0.3",
     "firebase": "^7.9.0",
     "lottie-react-native": "^2.6.1",
     "react": "^16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-elements": "^3.2.0",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^0.6.0",
+    "react-native-screens": "^2.17.1",
     "react-native-web": "~0.13.12",
-    "react-native-web-lottie": "^1.4.4"
+    "react-native-web-lottie": "^1.4.4",
+    "react-navigation": "^4.4.3",
+    "react-navigation-drawer": "^2.6.0",
+    "react-navigation-stack": "^2.10.2",
+    "react-navigation-tabs": "^2.10.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
