--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@firebase/firestore": "^2.1.4",
     "expo": "~40.0.0",
     "expo-constants": "^10.0.1",
+    "expo-image-picker": "^10.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^7.9.0",
     "lottie-react-native": "^2.6.1",
@@ -19,6 +20,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-google-books": "^1.0.4",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^0.6.0",
     "react-native-screens": "^2.17.1",
